# ht32-panel

./: Cargo.toml  README.md  flake.nix  supertool
.github/workflows/: ci.yml  docs.yml  release.yml
crates/ht32-panel-daemon/: Cargo.toml
crates/ht32-panel-daemon/assets/: alpine.min.js.PROVENANCE  editor.css  editor.js  widgets.js
crates/ht32-panel-daemon/src/: config.rs  lcd_health.rs  main.rs  state.rs
crates/ht32-panel-daemon/src/dbus/: interface.rs
crates/ht32-panel-daemon/src/faces/: arcs.rs  ascii.rs  clock.rs  digits.rs  layout.rs  mod.rs  professional.rs
crates/ht32-panel-daemon/src/faces/template/: face.rs  mod.rs  preview.rs  resolve.rs  schema.rs  spec.rs
crates/ht32-panel-daemon/src/rendering/: canvas.rs
crates/ht32-panel-daemon/src/sensors/: data.rs  disk.rs  network.rs
crates/ht32-panel-daemon/src/web/: api.rs  editor.rs  mod.rs
crates/ht32-panel-daemon/templates/: base.html  editor.html  index.html
crates/ht32-panel-daemon/templates/partials/: face.html
crates/ht32-panel-daemon/tests/: editor_smoke.md
crates/ht32-panel-hw/src/lcd/: device.rs
doc/: index.html  install.html
docs/design/: 2026-06-02-ws1-implementation-plan.md  2026-06-02-ws1-lcd-resilience.md  2026-06-02-ws2-zone-rendering.md  2026-06-19-ws2-phase1-layout-engine.md  2026-06-20-ws2-phase1b-faces.md  2026-06-20-ws4-fork-identity-release.md  2026-06-21-ws2-phase2-wraparound-graphs.md  2026-06-21-ws2-phase4-tilediff-transport.md  2026-06-21-ws5-template-builder.md
docs/superpowers/plans/: 2026-06-21-ws5-m2-template-editor.md  2026-06-23-ws5-m2-gui-integration.md
docs/superpowers/specs/: 2026-06-21-ws5-m2-template-editor-design.md
nix/: home-module.nix  module.nix
packaging/: GPG-KEY  ht32-panel.gpg  ht32-panel.repo  ht32-panel.sources  nfpm.yaml  org.ht32panel.Daemon.conf  postinstall.sh
templates/: example-portrait.json  example.json
