[package]
name = "ht32-panel-daemon"
description = "Daemon with web UI for HT32 panel control"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "ht32paneld"
path = "src/main.rs"

[dependencies]
ht32-panel-hw = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
image = { workspace = true }
tiny-skia = { workspace = true }
fontdue = { workspace = true }
png = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
zbus = { workspace = true }
askama = { workspace = true }
libc = { workspace = true }
chrono = "0.4.43"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
